--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,7 +6,7 @@ on:
       - 'main'
 
 jobs:
-  docker:
+  ci:
     runs-on: ubuntu-latest
     steps:
       -
@@ -33,7 +33,7 @@ jobs:
         run: echo ${{ steps.docker_build.outputs.digest }}
   cd:
     runs-on: ubuntu-latest
-    needs: docker
+    needs: ci
     steps:
       - uses: actions/checkout@v1
       - name: Docker login
